# Miner

./: .gitignore  .gitmodules  Banner.qml  CMakeLists.txt  GraphicsCardPage.qml  HelpPage.qml  SettingsPage.qml  constants.cpp  dataprovider.cpp  dataprovider.h  literal.h  literals.h  main.cpp  main.qml  mainStandalone.qml  miner_standalone.pro  minerprocess.cpp  minerprocess.h  minerui.cpp  minerui.h  qml.qrc  settingsmanager.h
subclass/: BasePage.qml  BlueButton.qml  CustomGraph.qml  CustomSwitch.qml  CustomTabBbutton.qml  GraphItem.qml  GraphicsCard.qml  LogButton.qml  LogItem.qml  LogPage.qml  ParagraphLink.qml  SettingsNode.qml  ToolBarButton.qml
